--- a/kickstart/app/globals.css
+++ b/kickstart/app/globals.css
@@ -101,6 +101,6 @@
     @apply bg-amber-500 dark:bg-amber-400;
   }
   .customButton {
-    @apply w-40 text-white p-2 cursor-pointer rounded-md text-sm text-center bg-slate-600 hover:bg-black dark:hover:bg-slate-400;
+    @apply w-40 text-white p-2 cursor-pointer rounded-md text-sm text-center disabled:opacity-50 disabled:cursor-not-allowed bg-slate-600 hover:bg-black dark:hover:bg-slate-400;
   }
 }
